# social_api

./: .env  config.py  main.py  pyproject.toml
db/: database.py
posts/: crud.py  schemas.py  views.py
users/: crud.py  schemas.py  views.py
